draft: reformat rules as claim + reason
Story fragments move to the stories section as teasers;
every rule now stands alone on its principle and because.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>